# cassette

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  after.txt  before.txt  conan2.md  conanfile.py  package.json  pyproject.toml  tsconfig.json
.cuark/: ConanLibImports.cmake  Extras.cmake  NOTE.md  TheBasics.cmake  buildtype.ts  cppbuild.ts  parbld.ts  webbuild.ts
cmake/: ConanLibImports.cmake
cpp/: CMakeLists.txt  README.md  api.cpp  config.cpp  files.cpp  from_json.cpp  handlers.cpp  main.cpp  pch.cpp  quitting.cpp  setup.cpp  tools.cpp  tunes.cpp  websocket.cpp  window.cpp
cpp/components/: CMakeLists.txt
cpp/components/core/: CMakeLists.txt  api.cpp  config.cpp  handlers.cpp  setup.cpp  tools.cpp
cpp/components/core/include/: setup.hpp  tunes.hpp
cpp/components/fileindex/: CMakeLists.txt  fileindex.cpp  fileindex_metadata.cpp
cpp/components/fileindex/include/: fileindex.hpp
cpp/components/fileindex/test/: CMakeLists.txt
cpp/components/ipc/: CMakeLists.txt  CommonTypes.hpp  json_pickling.hpp
cpp/components/metadata_store/: metadata.cpp
cpp/components/metadata_store/include/: metadata.hpp
cpp/components/musicdb/: CMakeLists.txt  musicdb.cpp
cpp/components/musicdb/include/: musicdb.hpp
cpp/components/tools/: CMakeLists.txt
cpp/components/tools/include/: toolbox.hpp
cpp/components/tools/test/: CMakeLists.txt  text_norm_test.cpp
cpp/core/: CMakeLists.txt  api.cpp  config.cpp  files.cpp  handlers.cpp  images.cpp  playlists.cpp  quitting.cpp  setup.cpp  tools.cpp  transpile.cpp  tunes.cpp  websocket.cpp  window.cpp
cpp/core/include/: api.hpp  config.hpp  files.hpp  handlers.hpp  images.hpp  playlists.hpp  quitting.hpp  setup.hpp  tools.hpp  tunes.hpp  websocket.hpp  window.hpp
cpp/core/test/: CMakeLists.txt  config_test.cpp  files_test.cpp  images_test.cpp
cpp/fileindex/: fileindex.cpp
cpp/fileindex/include/: fileindex.hpp
cpp/fileindex/test/: fileindex_test.cpp
cpp/include/: CommonTypes.hpp  api.hpp  audiofileindex.h  config.h  config.hpp  fileindex.hpp  files.hpp  handlers.hpp  json_pickling.hpp  metadata.hpp  musicdb.hpp  setup.h  text_normalization.hpp  tools.h  tools.hpp  tunes.hpp  websocket.hpp  window.hpp
cpp/ipc/: CMakeLists.txt  CommonTypes.hpp  json_pickling.hpp
cpp/metadata_store/: metadata.cpp
cpp/musicdb/: CMakeLists.txt  afi_metadata.cpp  audiofileindex.cpp  audiofileindex.h  fileindex.cpp  fileindex_metadata.cpp  metadata.cpp  musicdb.cpp
cpp/musicdb/fileindex/include/: fileindex.hpp
cpp/musicdb/include/: musicdb.hpp
cpp/musicdb/metadata_store/: CMakeLists.txt  metadata.cpp
cpp/musicdb/metadata_store/test/: CMakeLists.txt  metadata_test.cpp.bak
cpp/test/: CMakeLists.txt  audiofileindex_test.cpp  config_test.cpp  fileindex_test.cpp  json_test.cpp  text_norm_test.cpp
cpp/test/NotActuallyFiles/.afi/: index.txt
cpp/tools/: CMakeLists.txt  base64.cpp  hiddenfile.cpp  lowercase.cpp  text_normalization.cpp  text_tools.cpp  toolbox.hpp
cpp/tools/include/: base64.hpp  file_tools.hpp  hacks.hpp  lowercase.hpp  text_normalization.hpp  text_tools.hpp  tuple_hash.hpp
cpp/tools/test/: CMakeLists.txt  text_norm_test.cpp  tools_testing.cpp
include/: CommonTypes.hpp  api.h  audiofileindex.hpp  config.h  files.h  handlers.h  json_pickling.hpp  quitting.h  setup.h  tools.h  window.h
scripts/: build.ts  cppbuild.ts  gen.ts  gencpp.ts  parbld.ts  types.ts  webbuild.ts
scripts/emitters/: api.ts  cpp.ts  interface.ts  typescript.ts
src/: App.tsx  CMakeLists.txt  KeepAlive.tsx  frontend.tsx  hooks.tsx  main.cpp
src/core/: CMakeLists.txt  api.cpp  config.cpp  files.cpp  handlers.cpp  images.cpp  setup.cpp  tools.cpp  tunes.cpp  websocket.cpp  window.cpp
src/core/include/: api.hpp  files.hpp  handlers.hpp  images.hpp  quitting.hpp  tools.hpp  tunes.hpp  websocket.hpp
src/core/test/: CMakeLists.txt  config_test.cpp  files_test.cpp  images_test.cpp  tools_test.cpp
src/ipc/: CommonTypes.hpp  json_pickling.hpp
src/ipc/test/: CMakeLists.txt  json_test.cpp
src/musicdb/: musicdb.cpp
src/musicdb/fileindex/: CMakeLists.txt  fileindex.cpp
src/musicdb/fileindex/include/: fileindex.hpp
src/musicdb/fileindex/test/: fileindex_test.cpp
src/musicdb/include/: musicdb.hpp
src/musicdb/metadata_store/: metadata.cpp
src/musicdb/metadata_store/include/: metadata.hpp
src/musicdb/test/: CMakeLists.txt  musicdb_test.cpp
src/tools/: CMakeLists.txt  base64.cpp  file_tools.cpp  text_tools.cpp
src/tools/include/: range_tools.hpp  text_tools.hpp  tuple_hash.hpp
src/tools/test/: CMakeLists.txt
test/: CMakeLists.txt  config_test.cpp  json_test.cpp  test.cpp
web/: APITester.tsx  Constants.ts  DataSchema.ts  KeepAlive.tsx  Types.ts  Utils.ts  frontend.tsx  index.css  index.html
web/Shared/: CommonTypes.ts  Definitions.ts  EnumTypeSupport.ts  IDL.ts
web/State/: API.ts  Albums.ts  Artists.ts  CurrentView.ts  DisplayData.ts  FromCallback.ts  Helpers.ts  Hooks.ts  KeyBuffer.ts  LikesAndHates.ts  MediaInfo.ts  MusicLibrary.ts  PlaylistControl.ts  SimpleSettings.ts  SongPlayback.ts  SongState.ts  Songs.ts  StateTypes.ts  Storage.ts  TimeState.ts  Transcode.ts
web/Tools/: Ipc.ts  MediaEffect.ts  MenuHandler.ts  MusicDbListener.tsx  Notifier.tsx  ReactWebSocket.tsx  SimpleTags.tsx  SongList.tsx  SongMenus.tsx  Sorting.ts  Utilities.tsx
web/UI/: App.tsx  Liker.tsx  PlaybackControls.tsx  Sidebar.tsx  SongPlaying.tsx  VolumeControl.tsx
web/styles/: Sidebar.css
www/: APITester.tsx  App.tsx  Constants.ts  DataSchema.ts  FluentInit.tsx  Globals.ts  Ipc.ts  KeepAlive.tsx  SharedConstants.ts  Types.ts  Utils.ts  WebHelpers.ts  frontend.tsx  hooks.tsx  index.html  io.ts  types.ts
www/Jotai/: API.ts  Albums.ts  Artists.ts  DisplayData.ts  FromCallback.ts  Hooks.ts  KeyBuffer.ts  LikesAndHates.ts  Local.ts  MediaInfo.ts  MediaPlaying.ts  MusicLibrary.ts  PlaylistControl.ts  Preferences.ts  SimpleSettings.ts  SongPlayback.ts  Songs.ts  Storage.ts  Transcode.ts
www/Shared/: CommonTypes.ts  Definitions.ts  EnumTypeSupport.ts  Enums.ts  IDL.ts
(+77 files in other folders)
